--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "juejin-miming",
-  "version": "0.0.0",
-  "scripts": {},
-  "devDependencies": {}
+  "version": "0.0.1",
+  "author": "Palm Civet",
+  "repository": "https://github.com/palmcivet",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "watch": "vite build --watch"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "vite": "^2.7.2"
+  }
 }
