--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "juejin-miming",
   "version": "0.0.1",
   "author": "Palm Civet",
-  "repository": "https://github.com/palmcivet",
+  "repository": "https://github.com/palmcivet/juejin-miming",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "watch": "vite build --watch"
   },
-  "dependencies": {},
   "devDependencies": {
     "vite": "^2.7.2"
   }
